--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NeuroStore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="shoppingCart"></div>
+    <div id="cardProduct"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
